--- a/docker/dev/php-fpm/Dockerfile
+++ b/docker/dev/php-fpm/Dockerfile
@@ -1,15 +1,25 @@
 
 FROM php:8.0-fpm
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends libssl-dev zlib1g-dev netcat libxml2-dev libpq-dev libzip-dev && \
-    pecl install apcu && \
-    docker-php-ext-install -j$(nproc) zip opcache intl && \
-    docker-php-ext-enable apcu sodium && \
-    apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+RUN apt-get update \
+    && apt-get install -y zlib1g-dev g++ git libicu-dev zip libzip-dev zip libssl-dev libxml2-dev libpq-dev \
+    && docker-php-ext-install -j$(nproc) intl opcache pdo pdo_mysql \
+    && pecl install apcu \
+    && docker-php-ext-enable apcu \
+    && docker-php-ext-enable sodium \
+    && docker-php-ext-configure zip \
+    && docker-php-ext-install zip \
+    && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
 
 WORKDIR /var/www
 
-# CMD composer i -o ; php-fpm 
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer --quiet
 
-    EXPOSE 9000
+RUN curl -sS https://get.symfony.com/cli/installer | bash
+RUN mv /root/.symfony/bin/symfony /usr/local/bin/symfony
+
+RUN git config --global user.email "couchjanus@gmail.com" && \ 
+    git config --global user.name "couchjanus"
+
+EXPOSE 9000
