--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/asset": "5.3.*",
         "symfony/console": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.3.*",
         "symfony/monolog-bundle": "^3.7",
         "symfony/runtime": "5.3.*",
+        "symfony/webpack-encore-bundle": "^1.12",
         "symfony/yaml": "5.3.*"
     },
     "require-dev": {
@@ -21,7 +23,7 @@
         "symfony/maker-bundle": "^1.33",
         "symfony/stopwatch": "^5.3",
         "symfony/twig-bundle": "^5.3",
-        "symfony/var-dumper": "^5.3",
+        "symfony/var-dumper": "5.3.*",
         "symfony/web-profiler-bundle": "^5.3"
     },
     "config": {
